add new option 'log_all_jobs', which modifies the meaning of 'job_logs'.
Previously, setting job_logs would cause all jobs to be logged. Now, it will
only cause jobs with monitoring-failures to be logged. To log all jobs, set
'log_all_jobs' to some non-zero value.

Also, because job-logs can get big, gzip them on their way to disk.

--- a/src/Monitor/monitor.conf
+++ b/src/Monitor/monitor.conf
@@ -39,7 +39,7 @@ fake_transfer_script = /afs/cern.ch/user/w/wildish/public/COMP/PHEDEX_GIT/Testbe
 fake_transfer_rate = 104857600 # 1048576 is 1 MB/sec
 #fake_transfer_map = /path/to/map/file
 
-verbose = 1
+verbose = 0
 # debug   = 1
 
 #
@@ -49,7 +49,8 @@ verbose = 1
 # nodaemon = 1
 
 # Dump a logfile for each FTS job. Comment out unless you're debugging the source code!
-# job_logs = /data/wildish/dropbox/monitor/logs
+job_logs = /data/wildish/dropbox/monitor/logs
+# log_all_jobs # if job_logs is set, do I log all jobs, or only failures?
 
 # for more debugging information about the Monitor workflow
 # debug_jobs = 1
